[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "exopie"
version = "1.0"
description = "Find Exoplanet interior"
authors = ["Mykhaylo Plotnykov mykhaylo.plotnykov@mail.utoronto.ca"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
